--- a/ss5/products/src/main/webapp/WEB-INF/views/list.html
+++ b/ss5/products/src/main/webapp/WEB-INF/views/list.html
@@ -11,6 +11,7 @@
 <h1>List Products</h1>
 
 <p th:text="${mess}" style="color: red"></p>
+<h2 th:text="${message}"></h2>
 <table class="table">
     <tr>
         <th>Name</th>
