--- a/ss6/blog/src/main/resources/templates/view.html
+++ b/ss6/blog/src/main/resources/templates/view.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<div th:insert="~{layout :: header}"> </div>
+<h1 th:text="${blog.getCategory().name}"></h1>
 <h1 th:text="${blog.name}"> </h1>
 <p th:text="${blog.content}"></p>
 <p th:text="${blog.date}"></p>
