--- a/ss6/blog/src/main/resources/templates/create.html
+++ b/ss6/blog/src/main/resources/templates/create.html
@@ -7,7 +7,7 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-<h1></h1>
+<div th:insert="~{layout :: header}"> </div>
 <form th:action="@{/create}" method="post" th:object="${blog}">
     <div class="mb-3">
         <label for="ex" class="form-label">Name</label>
@@ -25,6 +25,12 @@
         <label for="ex2" class="form-label">Date</label>
         <input type="date" class="form-control" id="ex2" th:field="*{date}" >
     </div>
+     <div class="mb-3">
+        <select th:field="*{category}" >
+            <option th:each="c : ${listCategory}" th:text="${c.name}" th:value="${c.id}" ></option>
+        </select>
+    </div>
+
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
