--- a/ss6/blog/src/main/resources/templates/update.html
+++ b/ss6/blog/src/main/resources/templates/update.html
@@ -3,18 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="~{layout :: header}"> </div>
 <p th:text="${mess}"></p>
-<form th:action="@{/create}" method="post" th:object="${blog}" >
+<form th:action="@{/edit}" method="post" th:object="${blog}" >
+  <input th:field="*{id}" hidden>
+  <div class="mb-3">
   <p>Name</p>
   <input th:field="*{name}" type="text" th:placeholder="*{name}">
+  </div>
+  <div class="mb-3">
   <p>Author</p>
   <input th:field="*{author}" type="text" th:placeholder="*{author}">
+  </div>
+  <div class="mb-3">
   <p>Content</p>
   <textarea th:field="*{content}" th:placeholder="*{content}"></textarea>
+  </div>
+  <div class="mb-3">
   <p>Date</p>
   <input th:field="*{date}" type="date" th:placeholder="*{date}">
+  </div>
+  <div class="mb-3">
+    <select th:field="*{category}" >
+      <option th:each="c : ${listCategory}" th:text="${c.name}" th:value="${c.id}" ></option>
+    </select>
+  </div>
   <button type="submit">Save</button>
 </form>
 </body>
