--- a/ss8/music/src/main/resources/templates/list.html
+++ b/ss8/music/src/main/resources/templates/list.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a{
+            text-decoration: none !important;
+          color: white !important;
+        }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
 <h1>List Song</h1>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+ Create Modal
+</button>
 <button type="button" class="btn btn-primary">
     <a th:href="@{/create}">Create</a>
 </button>
-<table>
+<table class="table table-row-cell">
     <tr>
         <th>STT</th>
         <th>Name Song</th>
@@ -24,7 +33,6 @@
         <td th:text="${song.name}"></td>
         <td th:text="${song.author}"></td>
         <td th:text="${song.type}"></td>
-
         <td>
             <button type="button" class="btn btn-primary">
                 <a th:href="@{/update(id=${song.id})}">Update</a>
@@ -32,6 +40,45 @@
         </td>
     </tr>
 </table>
-
+<div  th:class="${hasErr == 'true' ? 'modal fade show' : 'modal fade'}" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+      th:style="${hasErr == 'true' ? 'display: block' : 'display: none'}">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:action="@{/create}" th:object="${songDto}" method="post">
+                <table>
+                    <tr>
+                        <td>Name Song</td>
+                        <td>
+                            <input th:field="*{name}" type="text">
+                        </td>
+                        <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+                    </tr>
+                    <tr>
+                        <td>Author</td>
+                        <td>
+                            <input th:field="*{author}" type="text">
+                        </td>
+                        <td th:if="${#fields.hasErrors('author')}" th:errors="*{author}"></td>
+                    </tr>
+                    <tr>
+                        <td>Type</td>
+                        <td>
+                            <input th:field="*{type}" type="text">
+                        </td>
+                        <td th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></td>
+                    </tr>
+                </table>
+                <button type="submit"> Save</button>
+                <button type="submit"><a th:href="@{/song}">close</a> </button>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
