--- a/ss8/music/src/main/resources/templates/list.html
+++ b/ss8/music/src/main/resources/templates/list.html
@@ -78,6 +78,11 @@
         </div>
     </div>
 </div>
+<div>
+    <a th:href="@{song(page=${listSong.number -1})}" th:if="${listSong.hasPrevious()}"><button class="btn btn-success">Previous</button></a>
+    <span th:text="${listSong.number+1}"></span>/<span th:text="${listSong.totalPages}"></span>
+    <a th:href="@{/song(page=${listSong.number +1})}" th:if="${listSong.hasNext()}"><button class="btn btn-success">sau</button></a>
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
