--- a/furuma_manager/src/main/resources/templates/home.html
+++ b/furuma_manager/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row header h-20 bg-white">
-        <div class="col 12 col-md-3 col-sm-6"><img src="../static/img/logo@2x.png" alt="" height="100"></div>
+        <div class="col 12 col-md-3 col-sm-6"><img src="../static/img/logo2x.png" alt="" height="100"></div>
         <div class="col-md-2 col-sm-6  "><img src="../static/img/widget-tripadvisor-rating.png" width="50%" height="30%">
             <p>Review </p>
         </div>
