--- a/furuma_manager/src/main/resources/templates/contract/list.html
+++ b/furuma_manager/src/main/resources/templates/contract/list.html
@@ -3,34 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
 <div th:insert="~{navbar :: header}"></div>
+<p th:text="${mess}" style="color: red;"></p>
 <table class="table table-row-cell">
-  <tr>
-    <th>Name Customer</th>
-    <th>Name Facility</th>
-    <th>End Day</th>
-    <th>Start Day</th>
-    <th>Deposition</th>
-    <th>Total</th>
-  </tr>
-  <tr th:each="contract :${contractDtoPage} ">
-    <td th:text="${contract.getCustomerName()}"></td>
-    <td th:text="${contract.getFacilityName()}"></td>
-    <td th:text="${contract.getContractEndDay()}"></td>
-    <td th:text="${contract.getContractStartDay()}"></td>
-    <td th:text="${contract.getContractDeposit()}"></td>
-    <td th:text="${contract.getTotal()}"></td>
-  </tr>
+    <tr>
+        <th>Name Customer</th>
+        <th>Name Facility</th>
+        <th>End Day</th>
+        <th>Start Day</th>
+        <th>Deposition</th>
+        <th>Total</th>
+        <th>Attach Facility</th>
+    </tr>
+    <tr th:each="contract :${contractDtoPage} ">
+        <td th:text="${contract.getCustomerName()}"></td>
+        <td th:text="${contract.getFacilityName()}"></td>
+        <td th:text="${contract.getContractEndDay()}"></td>
+        <td th:text="${contract.getContractStartDay()}"></td>
+        <td th:text="${contract.getContractDeposit()}"></td>
+        <td th:text="${contract.getTotal()}"></td>
+        <td>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add">
+                +
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Attach Facility
+            </button>
+        </td>
+    </tr>
 </table>
-<div >
-  <a th:href="@{contract(page=${contractDtoPage.number - 1})}" th:if="${contractDtoPage.hasPrevious()}">Previous</a>
-  <span th:text="${contractDtoPage.number + 1}"></span>/<span th:text="${contractDtoPage.totalPages}"></span>
-  <a th:href="@{contract(page=${contractDtoPage.number + 1})}" th:if="${contractDtoPage.hasNext()}">Next</a>
+<!-- Modal -->
+<div class="modal fade" id="add" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:object="${contractDetail}" th:action="@{contract/create}" method="post">
+            <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-3">Name:</div>
+                        <div class="col-md-9">
+                            <select th:field="*{attachFacility}">
+                                <option th:each="a : ${listAttach}" th:text="${a.name}" th:value="${a.id}"></option>
+                            </select>
+                        </div>
+                    </div>
+                <div class="row">
+                    <div class="col-md-3">Quantity</div>
+                    <div class="col-md-9">
+                        <input type="number" th:field="*{quantity}">
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div>
+    <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number - 1})}" th:if="${contractDtoPage.hasPrevious()}">Previous</a>
+    <span th:text="${contractDtoPage.number + 1}"></span>/<span th:text="${contractDtoPage.totalPages}"></span>
+    <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number + 1})}" th:if="${contractDtoPage.hasNext()}">Next</a>
 </div>
 <div th:insert="~{navbar :: footer}"></div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
