--- a/furuma_manager/src/main/resources/templates/contract/list.html
+++ b/furuma_manager/src/main/resources/templates/contract/list.html
@@ -30,9 +30,9 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add">
                 +
             </button>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a th:href="@{contract/show(id=${contract.getContractId()})}" class=" btn btn-outline-primary">
                 Attach Facility
-            </button>
+            </a>
         </td>
     </tr>
 </table>
@@ -45,7 +45,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form th:object="${contractDetail}" th:action="@{contract/create}" method="post">
-            <div class="modal-body">
+                <div class="modal-body">
                     <div class="row">
                         <div class="col-md-3">Name:</div>
                         <div class="col-md-9">
@@ -54,28 +54,65 @@
                             </select>
                         </div>
                     </div>
-                <div class="row">
-                    <div class="col-md-3">Quantity</div>
-                    <div class="col-md-9">
-                        <input type="number" th:field="*{quantity}">
+                    <div class="row">
+                        <div class="col-md-3">Quantity</div>
+                        <div class="col-md-9">
+                            <input type="number" th:field="*{quantity}">
+                        </div>
                     </div>
-                </div>
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save changes</button>
-            </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
             </form>
         </div>
     </div>
 </div>
 <div>
-    <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number - 1})}" th:if="${contractDtoPage.hasPrevious()}">Previous</a>
-    <span th:text="${contractDtoPage.number + 1}"></span>/<span th:text="${contractDtoPage.totalPages}"></span>
-    <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number + 1})}" th:if="${contractDtoPage.hasNext()}">Next</a>
-</div>
-<div th:insert="~{navbar :: footer}"></div>
+    <div th:class="${pass=='true'? 'modal fade show':'modal fade'}"
+         th:style="${pass =='true' ?'display:block':'display:none'}" class="modal fade" id="exampleModal" tabindex="-1"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-success-emphasis">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Attach Facility</h1>
+                </div>
+
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Cost</th>
+                        <th>Quantity</th>
+                    </tr>
+                    <tr th:each="c: ${contractDetailShow}">
+                        <td th:text="${c.attachFacility.name}"></td>
+                        <td th:text="${c.attachFacility.cost}"></td>
+                        <td th:text="${c.quantity}"></td>
+                    </tr>
+                </table>
+                <div class="modal-footer">
+                    <button th:attr="onclick=|closeModal()|" class="btn btn-outline-primary">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number - 1})}"
+           th:if="${contractDtoPage.hasPrevious()}">Previous</a>
+        <span th:text="${contractDtoPage.number + 1}"></span>/<span th:text="${contractDtoPage.totalPages}"></span>
+        <a class="btn btn-primary" th:href="@{contract(page=${contractDtoPage.number + 1})}"
+           th:if="${contractDtoPage.hasNext()}">Next</a>
+    </div>
+    <div th:insert="~{navbar :: footer}"></div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script>
+    function closeModal(){
+        document.getElementById("exampleModal").style.display="none"
+    }
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </html>
